fixed rounded edges and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@
 	padding-top: 36px;
 }
 .gif {
-	border-radius: 20px;
+	padding-top: 5px;
 }
 
 
